# nanocubesBenchmark

./: CMakeLists.txt  README.md
data/: CrimeQueries.json
ide/vs/: nanocubesBenchmark.sln
ide/vs/jsoncpp/: jsoncpp.vcxproj  jsoncpp.vcxproj.filters
ide/vs/nanocubesBenchmark/: nanocubesBenchmark.aps  nanocubesBenchmark.rc  nanocubesBenchmark.vcxproj  nanocubesBenchmark.vcxproj.filters  resource1.h
ide/vs/tiny-process-library/: tiny-process-library.vcxproj  tiny-process-library.vcxproj.filters
src/: CMakeLists.txt  CrimeQueries.harp  nanocubesBenchmark.cc  stopwatch.cc  stopwatch.hh
